# internal/dev_server/api/api.yaml
@@ -132,7 +132,7 @@ paths:
         200:
           $ref: "#/components/responses/FlagOverride"
         400:
-          $ref: "#/components/responses/NotFoundErrorResp"
+          $ref: "#/components/responses/InvalidRequestResponse"
 
     delete:
       summary: remove override for flag
@@ -239,6 +239,22 @@ components:
         application/json:
           schema:
             $ref: "#/components/schemas/Project"
+    InvalidRequestResponse:
+      description: Invalid request response
+      content:
+        application/json:
+          schema:
+            type: object
+            required:
+              - code
+              - message
+            properties:
+              code:
+                type: string
+                description: specific error code encountered
+              message:
+                type: string
+                description: description of the error
     NotFoundErrorResp:
       description: not found
       content:
